[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regflow"
version = "0.1.0"
description = "Domain registration and DNS management automation tool"
requires-python = ">=3.8.1"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cloudflare>=2.19.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
regflow = "regflow.domains:main"

[tool.hatch.build.targets.wheel]
packages = ["regflow"]